Reduce padding on narrow screens to avoid overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,6 +70,7 @@ section{
 @media only screen and (max-width: 920px) {
   section {
     width: 100%;
+    padding: 0 30px 0 30px;
   }
 }
 
@@ -278,10 +279,6 @@ td{
   }
 }
 
-.showcase-img {
-  max-width:100%;
-}
-
 // NAVIGATION
 .navbar {
   list-style-type: none;
@@ -357,20 +354,6 @@ td{
 
   .navbar::-webkit-scrollbar {
     display: none; /* Hide scrollbar in Chrome, Safari, and Edge */
-  }
-  
-  .navbar li {
-    flex: 0 0 auto; /* Ensures that items don't shrink */
-  }
-  
-  .navtab, .highlighted {
-    padding: 0.5em 1em;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .highlighted {
-    background-color: #f5f5f5; /* Example style for highlighted links */
   }
 }
 
